--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,4 +20,14 @@
 
     <uses-sdk android:minSdkVersion="7" />
 
+    <application>
+        <activity
+            android:name="haibison.android.lockpattern.LockPatternActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|uiMode|screenLayout|screenSize|smallestScreenSize"
+            android:excludeFromRecents="true"
+            android:exported="false"
+            android:screenOrientation="user"
+            android:theme="@style/Alp.42447968.Theme.Light" />
+    </application>
+
 </manifest>
